demo/dns-egress-control/dns-policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.external-domain-access
spec:
  # requires security tier
  tier: security
  selector: '(app == "centos" && projectcalico.org/namespace == "dev")||(app == "microservice2" && projectcalico.org/namespace == "storefront")'
  order: 200
  types:
    - Egress
  egress:
  - action: Allow
    destination:
      domains:
      - '*.twilio.com'
